--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <!-- 手机端应用 -->
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>VUECLIONR</title>
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_747957_wzr2jf0ydan.css">
+    <title>联系聚集地-嘻嘻😬</title>
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_747957_wzr2jf0ydan.css">
     <link rel="stylesheet" href="static/css/reset.css">
+    <link rel="manifest" href="./static/manifest.json">
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if('addEventListener' in document){
