--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- 手机端应用 -->
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>联系聚集地-嘻嘻😬</title>
+    <title>练习聚集地-嘻嘻😬</title>
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_747957_wzr2jf0ydan.css">
     <link rel="stylesheet" href="static/css/reset.css">
-    <link rel="manifest" href="./static/manifest.json">
+    <link rel="manifest" href="static/manifest.json">
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if('addEventListener' in document){
@@ -23,7 +23,7 @@
     </script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">1111</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
